--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.safety">
-
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -19,32 +18,28 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.Safety"
         tools:targetApi="31">
-
+        <activity
+            android:name=".trackemployee"
+            android:exported="false" />
         <!-- Activities -->
         <activity
             android:name=".HomePageActivity"
-            android:exported="true">
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".signup_activity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
 
-        <!-- UCrop Activity -->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- UCrop Activity -->
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <!-- FileProvider for storing images -->
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" /> <!-- FileProvider for storing images -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.safety.fileprovider"
@@ -54,9 +49,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
-
-
     </application>
 
 </manifest>
