--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,13 @@
             android:foregroundServiceType="location"
             android:enabled="true"
             android:exported="false" />
+
+        <service
+            android:name=".StatusCheckService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="location" />
+
         <receiver android:name=".GeofenceBroadcastReceiver" android:exported="true"/>
 
         <service
