--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -67,7 +68,7 @@
             android:exported="false"
             android:foregroundServiceType="location" />
 
-        <receiver android:name=".GeofenceBroadcastReceiver" android:exported="true"/>
+        <receiver android:name=".GeofenceBroadcastReceiver" android:exported="false" />
 
         <service
             android:name=".LocationService"
