--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
 
     <application
         android:allowBackup="true"
+        tools:replace="android:allowBackup"
+        android:usesCleartextTraffic="true"
+
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -26,11 +29,14 @@
         android:theme="@style/Base.Theme.Safety"
         tools:targetApi="31">
         <activity
+            android:name=".MapActivity"
+            android:exported="false" />
+        <activity
             android:name=".MyActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity2"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".trackemployee"
             android:exported="false" /> <!-- Activities -->
