--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.safety">
+
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -14,50 +15,43 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
         tools:replace="android:allowBackup"
         android:usesCleartextTraffic="true"
-
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.Safety"
-        tools:targetApi="31">
-        <activity
-            android:name=".MapActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MyActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".trackemployee"
-            android:exported="false" /> <!-- Activities -->
-        <activity
-            android:name=".HomePageActivity"
-            android:exported="true" />
-        <activity
-            android:name=".signup_activity"
-            android:exported="false" />
+        android:theme="@style/Base.Theme.Safety">
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY_HERE" />
+
+        <!-- Activities -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- UCrop Activity -->
+        </activity>
+        <activity android:name=".HomePageActivity" android:exported="true" />
+        <activity android:name=".signup_activity" android:exported="false" />
+        <activity android:name=".trackemployee" android:exported="false" />
+        <activity android:name=".MapActivity" android:exported="false" />
+        <activity android:name=".MyActivity" android:exported="false" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" /> <!-- FileProvider for storing images -->
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
+        <!-- FileProvider for storing images -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.safety.fileprovider"
@@ -68,6 +62,12 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+        <!-- Services -->
+        <service
+            android:name=".LocationService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="location" />
         <service
             android:name=".LocationTrackingService"
             android:enabled="true"
@@ -79,23 +79,23 @@
             android:exported="false"
             android:foregroundServiceType="location" />
 
+        <!-- Geofence Receiver -->
         <receiver
             android:name=".GeofenceBroadcastReceiver"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.location.GeofenceTransition" />
+            </intent-filter>
+        </receiver>
+
+        <!-- Boot Receiver -->
         <receiver
             android:name=".BootBroadcastReceiver"
             android:enabled="true"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
-        <service
-            android:name=".LocationService"
-            android:enabled="true"
-            android:exported="false"
-            android:foregroundServiceType="location" />
     </application>
-
 </manifest>
